--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-12">
             <h2 class="site-heading text-black mb-5">Say <strong>Hello</strong></h2>
-            <form action="https://formspree.io/f/mldrzoya" method="POST" class="p-5 bg-white">
+            <form action="https://formspree.io/f/mzzpoklw" method="POST" class="p-5 bg-white">
               
               <div class="row form-group">
                 <div class="col-md-12 mb-3 mb-md-0">
